[package]
name = "creek"
version = "1.2.2"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["audio", "io", "disk", "stream"]
categories = ["multimedia::audio"]
description = "Realtime-safe disk streaming to/from audio files"
documentation = "https://docs.rs/creek"
repository = "https://github.com/MeadowlarkDAW/creek"
readme = "README.md"
include = [
    "src/",
    "COPYRIGHT",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "how_it_works.svg",
]
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "core",
    "decode_symphonia",
    "encode_wav",
    "demos/player",
    "demos/writer",
]

[features]
default = ["decode", "encode-wav"]
decode = [ "creek-decode-symphonia" ]
decode-aac = [ "creek-decode-symphonia/aac" ]
decode-alac = [ "creek-decode-symphonia/alac" ]
decode-flac = [ "creek-decode-symphonia/flac" ]
decode-mp3 =  [ "creek-decode-symphonia/mp3" ]
decode-pcm = [ "creek-decode-symphonia/pcm" ]
decode-isomp4 = [ "creek-decode-symphonia/isomp4" ]
decode-ogg = [ "creek-decode-symphonia/ogg" ]
decode-vorbis = [ "creek-decode-symphonia/vorbis" ]
decode-wav = [ "creek-decode-symphonia/wav" ]
decode-open-source = []
decode-all = [
  "decode-aac",
  "decode-alac",
  "decode-flac",
  "decode-mp3",
  "decode-pcm",
  "decode-isomp4",
  "decode-ogg",
  "decode-vorbis",
  "decode-wav"
]
encode-wav = ["creek-encode-wav"]

[dependencies]
creek-core = { version = "0.2.2", path = "core" }
creek-decode-symphonia = { version = "0.3.2", path = "decode_symphonia", optional = true }
creek-encode-wav = { version = "0.2.0", path = "encode_wav", optional = true }

# Unoptimized builds result in prominent gaps of silence after cache misses in the demo player.
[profile.dev]
opt-level = 2
