[package]
name = "creek-core"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["audio", "io", "disk", "stream"]
categories = ["multimedia::audio"]
description = "core components for creek"
documentation = "https://docs.rs/creek-core"
repository = "https://github.com/RustyDAW/creek"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtrb = "0.2"
arrayvec = "0.7.4"