[package]
name = "creek-decode-symphonia"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["audio", "io", "disk", "stream"]
categories = ["multimedia::audio"]
description = "Audio file decoding for creek"
documentation = "https://docs.rs/creek-decode-wav"
repository = "https://github.com/RustyDAW/creek"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
creek-core = { version = "0.1", path = "../core" }
symphonia = "0.5"

[dev-dependencies]
float-cmp = "*"

[features]
#aac = [ "symphonia/aac" ]
#alac = [ "symphonia/alac" ]
flac = [ "symphonia/flac" ]
mp3 =  [ "symphonia/mp3" ]
pcm = [ "symphonia/pcm" ]
#isomp4 = [ "symphonia/isomp4" ]
ogg = [ "symphonia/ogg" ]
vorbis = [ "symphonia/vorbis" ]
wav = [ "symphonia/wav" ]
