[package]
name = "creek-encode-wav"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
creek-core = { version = "0.1", path = "../core" }
byte-slice-cast = "1.0.0"