[package]
name = "player"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
creek = { path = "../../" }
eframe = "0.24.1"
rtrb = "0.3"
cpal = "0.15"
