[package]
name = "writer"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
creek = { path = "../../" }
eframe = "0.9.0"
rtrb = "0.2"
cpal = "0.13"
