[package]
name = "demo_player"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rt-audio-disk-stream = { path = "../../" }
eframe = "0.8.0"
rtrb = "0.1.2"
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", branch = "master" }
cpal = "0.13.1"
oorandom = "11.1.3"